--- a/page14.html
+++ b/page14.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-2j" data-rv-view="469">
+  <section id="menu-2j" data-rv-view="273">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="473" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop site creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="277" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="476" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="280" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="478" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="282" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="480" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="284" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -128,7 +128,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="482" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -139,7 +139,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="484" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -154,7 +154,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="486" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="488" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -183,7 +183,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="471" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="275" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
