--- a/page26.html
+++ b/page26.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-7e" data-rv-view="696">
+  <section id="menu-7e" data-rv-view="520">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop your own website</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="700" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.ws/d">best free web page software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-7g" data-rv-view="524" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7h" data-rv-view="703" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7h" data-rv-view="527" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -96,7 +96,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-7i" data-rv-view="705" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-7i" data-rv-view="529" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -113,7 +113,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7j" data-rv-view="707" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7j" data-rv-view="531" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -123,7 +123,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-7k" data-rv-view="709" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-7k" data-rv-view="533" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -134,7 +134,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-7l" data-rv-view="711" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-7l" data-rv-view="535" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -144,7 +144,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7f" data-rv-view="698" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7f" data-rv-view="522" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
