--- a/page43.html
+++ b/page43.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-ey" data-rv-view="1213">
+  <section id="menu-ey" data-rv-view="1063">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1217" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1067" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -101,7 +101,7 @@
 
 </section>
 
-<div id="custom-html-f1" custom-code="true" data-rv-view="1220"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-f1" custom-code="true" data-rv-view="1070"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -406,7 +406,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1215" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1065" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
