--- a/page50.html
+++ b/page50.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-gk" data-rv-view="1358">
+  <section id="menu-gk" data-rv-view="1226">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1362" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.ws/a">best free website builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1230" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -101,7 +101,7 @@
 
 </section>
 
-<div id="custom-html-gn" custom-code="true" data-rv-view="1365"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-gn" custom-code="true" data-rv-view="1233"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -406,7 +406,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1360" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1228" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
