--- a/page52.html
+++ b/page52.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-gv" data-rv-view="1378">
+  <section id="menu-gv" data-rv-view="1246">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1375" style="padding-top: 100px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.ws/a">best website builder</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1243" style="padding-top: 100px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -116,7 +116,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1380" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1248" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -126,7 +126,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1382" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1250" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -136,7 +136,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1384" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1252" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -146,7 +146,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1386" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1254" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -156,7 +156,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1388" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1256" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
