--- a/page58.html
+++ b/page58.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-j0" data-rv-view="341">
+  <section id="menu-j0" data-rv-view="1496">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop website maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="345" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.ws/e">best website creation software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1500" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -101,7 +101,7 @@
 
 </section>
 
-<div id="custom-html-j3" custom-code="true" data-rv-view="348"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-j3" custom-code="true" data-rv-view="1503"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -406,7 +406,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="343" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1498" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
