--- a/page60.html
+++ b/page60.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-j9" data-rv-view="10" style="background-image: url(assets/images/mbr-19-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.me/r">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-j9" data-rv-view="10" style="background-image: url(assets/images/mbr-19-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -290,7 +290,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>That last picture features another artist, Sara, who explained that, “the process is very long”, and the piece you see is, “the result of experimentation that you wouldn’t see in the final.” She found that it is important to, “take time to enjoy the art, not just for a grade, but for you.”</p><p><br></p><p>After the attendees had taken time to admire the work, it was time for the auction to begin upstairs. Mr. Mitchell began with a speech focusing on the journey his students have taken as IB Art students. He discussed their place in the modern globalized world and that many would go on to study art, but many will not (hopefully continuing art as a hobby). He quotes Socrates who said, “I am not an Athenian or a Greek, but a citizen of the world.” Our artists are becoming citizens of the world who will hopefully go on to inspire others to inspire others to do the same through education. As John, the auctioneer, presented the works of art for sale, 11th grade members of the Greene Gallery team retrieved the art from the bottom floor to display. Everyone present enjoy John’s jokes and cheery demeanor throughout the whole auction. Overall, the auction managed to raise 1440 euros for the Rahula Trust, which sponsors education for the world’s poorest children.</p></div>
+            <div class="col-xs-12 lead"><p>That last picture features another artist, Sara, who explained that, “the process is very long”, and the piece you see is, “the result of experimentation that you wouldn’t see in the final.” She found that it is important to, “take time to enjoy the art, not just for a grade, but for you.”</p><p><br></p><p>After the attendees had taken time to admire the work, it was time for the auction to begin upstairs. Mr. Mitchell began with a speech focusing on the journey his students have taken as IB Art students. He discussed their place in the modern globalized world and that many would go on to study art, but others will not (hopefully continuing art as a hobby). He quoted Socrates who said, “I am not an Athenian or a Greek, but a citizen of the world.” Our artists are becoming citizens of the world who will hopefully go on to inspire others to do the same through education. As John, the auctioneer, presented the works of art for sale, 11th grade members of the Greene Gallery team retrieved the art from the bottom floor to display. Everyone present enjoyed John’s jokes and cheery demeanor throughout the whole auction. Overall, the auction managed to raise 1440 euros for the Rahula Trust, which sponsors education for the world’s poorest children.</p></div>
         </div>
     </div>
 
