--- a/page30.html
+++ b/page30.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-99" data-rv-view="574">
+  <section id="menu-99" data-rv-view="577">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">web builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="578" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobiri.se/i">web creation software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="581" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="581" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="584" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -81,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="583" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="586" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="585" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="588" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -111,7 +111,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="587" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="590" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -122,7 +122,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="589" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="592" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -132,7 +132,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="591" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="594" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -149,7 +149,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="593" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="596" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -159,7 +159,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="595" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="598" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -176,7 +176,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="597" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="600" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -186,7 +186,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="576" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="579" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
