--- a/page17.html
+++ b/page17.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-3z" data-rv-view="297">
+  <section id="menu-3z" data-rv-view="300">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">how to make your own site for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="301" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="304" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -78,7 +78,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-40" data-rv-view="299" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-40" data-rv-view="302" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
