--- a/page40.html
+++ b/page40.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="menu-e6" data-rv-view="953">
+  <section id="menu-e6" data-rv-view="956">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ex" data-rv-view="957" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobiri.se/v">html templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ex" data-rv-view="960" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -86,7 +86,7 @@
 
 </section>
 
-<div id="custom-html-ek" custom-code="true" data-rv-view="960"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-ek" custom-code="true" data-rv-view="963"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -391,7 +391,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e7" data-rv-view="955" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e7" data-rv-view="958" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
