--- a/page52.html
+++ b/page52.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-gv" data-rv-view="1174">
+  <section id="menu-gv" data-rv-view="1177">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">free amp templates</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1171" style="padding-top: 100px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1174" style="padding-top: 100px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -101,7 +101,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1176" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1179" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -111,7 +111,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1178" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1181" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -121,7 +121,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1180" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1183" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -131,7 +131,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1182" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1185" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -141,7 +141,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1184" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1187" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
