--- a/page17.html
+++ b/page17.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/w">free html5 templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="304" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a href="https://mobiri.se/n">free simple site templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="304" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
