--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">how to create your own web page</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -78,11 +78,11 @@
                                 <p>Everything you need to know about teachers, clubs, and places on campus.<br><br>Written By: Aimee Dastin-van Rijn</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page63.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-primary" href="page64.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 36%;">
-                            <div class="mbr-figure"><img src="assets/images/stj-lions-circle-600x6000.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/stj-lions-circle-600x6001.jpg"></div>
                         </div>
 
                     </div>
