--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobiri.se/z">best free css templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -82,7 +82,7 @@
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 36%;">
-                            <div class="mbr-figure"><img src="assets/images/stj-lions-circle-600x6001.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/stj-lions-circle-600x600.jpg"></div>
                         </div>
 
                     </div>
