--- a/page28.html
+++ b/page28.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">free bootstrap themes</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-95" data-rv-view="486" style="background-image: url(assets/images/mbr-6-1620x1080.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobiri.se/t">free amp template</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-95" data-rv-view="486" style="background-image: url(assets/images/mbr-6-1620x1080.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(34, 34, 34);">
     </div>
