--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free html templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="99" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="99" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -388,7 +388,7 @@
                   <h3 class="mbr-section-title display-2">Ashley Webster</h3>
                   <div class="lead">
 
-                    <p>Julia is a horoscope writer for the paper.<br></p>
+                    <p>Ashley is a horoscope writer for the paper.<br></p>
 
                   </div>
 
@@ -400,7 +400,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 20%;">
-                  <div class="mbr-figure"><img src="assets/images/16807801-370308456674317-1031270112538580623-n-335x335.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/mbr-1400x438.jpg"></div>
               </div>
 
             </div>
@@ -427,7 +427,7 @@
                   <h3 class="mbr-section-title display-2">Ellie Smith</h3>
                   <div class="lead">
 
-                    <p>Julia is a horoscope writer for the paper.&nbsp;<br></p>
+                    <p>Ellie is a horoscope writer for the paper.&nbsp;<br></p>
 
                   </div>
 
