--- a/page46.html
+++ b/page46.html
@@ -50,7 +50,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="vJsGI8V9wi0e4+6cWRqwqtzwuboj3RKgMtuOYpBUcniqjVFJSketV9jWVvLfF0ekaMsKxawlAfIHYfjK2f+YQl9LRCr8Uz2yGFOpi0Gyr1pdIPO5kIXdmfTrwSjABKAr" data-form-email="true">
+                        <input type="hidden" value="MpdeIavHva6Lvh0oLMpdtrg2aYTG1lPRU8K4Rgj7vUOs5YyvH0gPVnrVfnM/xHY8BaxZnnnZRt44u2NZn80NH2RO0O0bLhEIogsjCfoXuTkoVXYBFpi5deD6xkzeZB3e" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/f">easy website creator</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1029" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobiri.se/h">how to create your own web page</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1029" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
